# local_descriptors_object_recognition

./: CMakeLists.txt  README.md  main.cpp  simple_interface.cpp  simple_interface.h
L_RecPuntInt/: L_Descriptores.cpp  L_Descriptores.h  L_Fnes_Pato.cpp  L_Fnes_Pato.h  L_Fnes_Pato_optim.cpp  L_GenPuntInt.cpp  L_GenPuntInt.h  L_Lapack.hpp  L_RecPuntInt.cpp  L_RecPuntInt.h
L_RecPuntInt/siftImpl/: L_CvSift.cpp  L_CvSift.h
flann/: flann.cpp  flann.h
flann/algorithms/: KDTree.h  KMeansTree.h  NNIndex.h  dist.h
flann/nn/: Autotune.h  Testing.cpp  Testing.h  ground_truth.h  simplex_downhill.h
flann/util/: Allocator.h  Dataset.h  Logger.cpp  Logger.h  ResultSet.h
